# UXP1A-Linda-language

./: .gitignore  CMakeLists.txt
include/: ConstsAndEnums.h  SerializationUtils.h  consts.h  serialization_utils.h
include/client/: linda.h
include/server/: MasterProcess.h  WaitingProcess.h
include/tuple/: Tuple.h  TuplePattern.h
src/: SerializationUtils.cpp  consts.h  instructions.txt  linda-client.cpp  main.cpp  serialization_utils.h  serializtion_utils.cpp  test-script.sh  test_cli.cpp
src/client/: linda.cpp
src/server/: MasterProcess.cpp  WaitingProcess.cpp
src/tuple/: Tuple.cpp  Tuple.h  TuplePattern.cpp  TuplePattern.h
src/util/: SerializationUtils.cpp
test/: service_tests.cpp  socket_tests.cpp  tuple_tests.cpp
